2011-09-20  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-fun.el (gnus-convert-image-to-x-face-command): Doc fix.

2011-09-18  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-inline-media-tests): Fix typo in regexp.

2011-09-19  Julien Danjou  <julien@danjou.info>

	* auth-source.el (auth-source-netrc-parse): Use an obfuscation method
	which work with things that are not ASCII.

2011-09-17  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-inline-media-tests): Support imagemagick images.

2011-09-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-read-group-1): Bump the "Retrieving"
	message level.

2011-09-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-read-from-minibuffer): Make abbrev expansion work.

2011-09-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus.el (gnus-interactive-exit): Update defcustom spec.

2011-09-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* gnus.el (gnus-nntp-server): Move to gnus-int.el to silence bytecomp.
	* gnus-int.el (gnus-nntp-server): Move from gnus.el.

2011-09-12  Andrew Cohen  <cohen@andy.bu.edu>

	* gnus-group.el (gnus-group-list-limit-map, gnus-group-list-flush-map)
	(gnus-group-list-plus-map): Allow limiting, flushing and plusing ticked
	articles.

2011-09-11  Chong Yidong  <cyd@stupidchicken.com>

	* message.el (message-pop-to-buffer): Default to switch-to-buffer.
	(message-mail-other-window, message-mail-other-frame)
	(message-news-other-window, message-news-other-frame):
	Use switch-to-buffer-other-frame and switch-to-buffer-other-window
	instead of setting buffer display varibles.

2011-09-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-list-limit): Explain what the command does.

	* gnus-sum.el (gnus-fetch-headers): Bump message level.

2011-09-11  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-dup.el (gnus-dup-suppress-articles): Move "Suppressing
	duplicates" to a higher level.
