@@ -1,3 +1,7 @@
+2011-09-20  Julien Danjou  <julien@danjou.info>
+
+	* auth-source.el (auth-source-format-cache-entry): New function.
+
 2011-09-20  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* gnus-fun.el (gnus-convert-image-to-x-face-command): Doc fix.
